syntax = "proto3";
option go_package = "github.com/twirapp/twir/libs/api/messages/integrations_donatepay";
package messages.integrations_donatepay;

message GetResponse {
	string api_key = 1;
}

message PostRequest {
	string api_key = 1;
}
